# linkepuc

./: app.db  env.example  launch.json  pyproject.toml  readme.md  test.db
.github/workflows/: deploy.yml
backend/: bearertokens.txt  debug_output.txt  dependecies.py  generate_ssl_cert.py  historicoPucExtractor.py  historico_academico.csv  main.py  main_https.py  models.py  recommendation_worker.py  repositories.py  setup_https.py  transcription.txt
backend/controllers/: candidato_vaga_controller.py  department_controller.py  historico_controller.py  interesse_controller.py  interesse_usuario_controller.py  interesse_vaga_controller.py  mensagem_controller.py  publicacao_controller.py  recommendation_controller.py  user_controller.py  vaga_controller.py
backend/migrations/: add_candidato_vaga_table.py  add_carta_motivacao_field.py
backend/models/: base.py  candidato_vaga.py  departamento.py  disciplinas.py  historico.py  interesse.py  interesse_usuario.py  interesse_vaga.py  localizacao.py  mensagem.py  publicacao.py  recomendacao.py  tipo_vaga.py  user.py  vaga.py
backend/repositories/: candidato_vaga_repository.py  department_repository.py  historico_repository.py  interesse_repository.py  interesse_usuario_repository.py  interesse_vaga_repository.py  mensagem_repository.py  publicacao_repository.py  user_repository.py  vaga_repository.py
backend/schemas/: candidato_schema.py  departmento_schema.py  historico_schema.py  mensagem_schema.py  tipo_schema.py  user_schema.py  vaga_schema.py
backend/ssl/: cert.pem  (+1 more)
database/: create_disciplinas_table.sql
(+119 files in other folders)
